[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Theme/InsetMenu.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/Options/ActionOption.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Options/ControllerConfig.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/FrontBack.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/TopBack.png" type="Texture" id=14]

[node name="ControllerConfig" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 480.0
margin_bottom = 270.0

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 270.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Sprites" type="VBoxContainer" parent="Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 266.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Margin/Sprites"]
margin_left = 248.0
margin_right = 472.0
margin_bottom = 80.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Margin/Sprites/HBoxContainer2"]
margin_right = 224.0
margin_bottom = 80.0
texture = ExtResource( 14 )

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/Sprites"]
margin_top = 84.0
margin_right = 224.0
margin_bottom = 228.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Margin/Sprites/HBoxContainer"]
margin_right = 224.0
margin_bottom = 144.0
texture = ExtResource( 6 )

[node name="Controls" type="HBoxContainer" parent="Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 266.0

[node name="Front" type="VBoxContainer" parent="Margin/Controls"]
margin_right = 234.0
margin_bottom = 262.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/Controls/Front"]
margin_right = 234.0
margin_bottom = 77.0

[node name="Dpad" type="VBoxContainer" parent="Margin/Controls/Front/HBoxContainer"]
visible = false
margin_right = 130.0
margin_bottom = 77.0
size_flags_horizontal = 10

[node name="DpadUp" parent="Margin/Controls/Front/HBoxContainer/Dpad" instance=ExtResource( 2 )]
margin_left = 33.0
margin_right = 96.0
margin_bottom = 23.0
size_flags_horizontal = 4

[node name="HBox" type="HBoxContainer" parent="Margin/Controls/Front/HBoxContainer/Dpad"]
margin_top = 27.0
margin_right = 130.0
margin_bottom = 50.0

[node name="DpadLeft" parent="Margin/Controls/Front/HBoxContainer/Dpad/HBox" instance=ExtResource( 2 )]
margin_right = 63.0
margin_bottom = 23.0

[node name="DpadRight" parent="Margin/Controls/Front/HBoxContainer/Dpad/HBox" instance=ExtResource( 2 )]
margin_left = 67.0
margin_right = 130.0
margin_bottom = 23.0

[node name="DpadDown" parent="Margin/Controls/Front/HBoxContainer/Dpad" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 54.0
margin_right = 96.0
margin_bottom = 77.0
size_flags_horizontal = 4

[node name="Menu" type="HBoxContainer" parent="Margin/Controls/Front/HBoxContainer"]
margin_left = 41.0
margin_top = 27.0
margin_right = 73.0
margin_bottom = 50.0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Select" parent="Margin/Controls/Front/HBoxContainer/Menu" instance=ExtResource( 2 )]
margin_bottom = 23.0

[node name="Start" parent="Margin/Controls/Front/HBoxContainer/Menu" instance=ExtResource( 2 )]
margin_left = 18.0
margin_right = 32.0
margin_bottom = 23.0

[node name="Face" type="VBoxContainer" parent="Margin/Controls/Front/HBoxContainer"]
margin_left = 202.0
margin_right = 234.0
margin_bottom = 77.0
size_flags_horizontal = 10

[node name="FaceUp" parent="Margin/Controls/Front/HBoxContainer/Face" instance=ExtResource( 2 )]
margin_left = 9.0
margin_right = 23.0
margin_bottom = 23.0
size_flags_horizontal = 4

[node name="HBox" type="HBoxContainer" parent="Margin/Controls/Front/HBoxContainer/Face"]
margin_top = 27.0
margin_right = 32.0
margin_bottom = 50.0

[node name="FaceLeft" parent="Margin/Controls/Front/HBoxContainer/Face/HBox" instance=ExtResource( 2 )]
margin_bottom = 23.0

[node name="FaceRight" parent="Margin/Controls/Front/HBoxContainer/Face/HBox" instance=ExtResource( 2 )]
margin_left = 18.0
margin_right = 32.0
margin_bottom = 23.0

[node name="FaceDown" parent="Margin/Controls/Front/HBoxContainer/Face" instance=ExtResource( 2 )]
margin_left = 9.0
margin_top = 54.0
margin_right = 23.0
margin_bottom = 77.0
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="Margin/Controls/Front"]
visible = false
margin_top = 84.0
margin_right = 224.0
margin_bottom = 228.0
size_flags_vertical = 8
texture = ExtResource( 6 )

[node name="Top" type="VBoxContainer" parent="Margin/Controls"]
margin_left = 238.0
margin_right = 472.0
margin_bottom = 262.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Margin/Controls/Top"]
margin_right = 234.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="TextureRect" type="TextureRect" parent="Margin/Controls/Top"]
visible = false
margin_top = 132.0
margin_right = 264.0
margin_bottom = 212.0
size_flags_vertical = 0
texture = ExtResource( 14 )

[node name="Top" type="HBoxContainer" parent="Margin/Controls/Top"]
margin_top = 84.0
margin_right = 234.0
margin_bottom = 134.0

[node name="Left" type="VBoxContainer" parent="Margin/Controls/Top/Top"]
margin_left = 30.0
margin_right = 44.0
margin_bottom = 50.0
size_flags_horizontal = 6

[node name="L1" parent="Margin/Controls/Top/Top/Left" instance=ExtResource( 2 )]
margin_bottom = 23.0

[node name="L2" parent="Margin/Controls/Top/Top/Left" instance=ExtResource( 2 )]
margin_top = 27.0
margin_bottom = 50.0

[node name="Stick" type="HBoxContainer" parent="Margin/Controls/Top/Top"]
margin_left = 100.0
margin_top = 13.0
margin_right = 132.0
margin_bottom = 36.0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="L3" parent="Margin/Controls/Top/Top/Stick" instance=ExtResource( 2 )]
margin_bottom = 23.0

[node name="R3" parent="Margin/Controls/Top/Top/Stick" instance=ExtResource( 2 )]
margin_left = 18.0
margin_right = 32.0
margin_bottom = 23.0

[node name="Right" type="VBoxContainer" parent="Margin/Controls/Top/Top"]
margin_left = 189.0
margin_right = 203.0
margin_bottom = 50.0
size_flags_horizontal = 6

[node name="R1" parent="Margin/Controls/Top/Top/Right" instance=ExtResource( 2 )]
margin_bottom = 23.0

[node name="R2" parent="Margin/Controls/Top/Top/Right" instance=ExtResource( 2 )]
margin_top = 27.0
margin_bottom = 50.0

[node name="Extra" type="HBoxContainer" parent="Margin/Controls/Top"]
margin_top = 138.0
margin_right = 234.0
margin_bottom = 192.0

[node name="MenuButtons" type="VBoxContainer" parent="Margin/Controls/Top/Extra"]
margin_right = 72.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Margin/Controls/Top/Extra/MenuButtons"]
margin_right = 72.0
margin_bottom = 14.0
text = "Select Style"

[node name="OptionButton" type="OptionButton" parent="Margin/Controls/Top/Extra/MenuButtons"]
margin_top = 18.0
margin_right = 72.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "Xbox"
items = [ "Xbox", null, false, 0, null, "Nintendo", null, false, 1, null ]
selected = 0

[node name="MenuButtons3" type="VBoxContainer" parent="Margin/Controls/Top/Extra"]
margin_left = 76.0
margin_right = 140.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Margin/Controls/Top/Extra/MenuButtons3"]
margin_right = 64.0
margin_bottom = 14.0
text = "Movement"

[node name="OptionButton" type="OptionButton" parent="Margin/Controls/Top/Extra/MenuButtons3"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "Either"
items = [ "Either", null, false, 0, null, "Left Stick", null, false, 1, null, "Dpad", null, false, 2, null ]
selected = 0
